refactor(Namespaces): Make namespaces consistent and non-conflicting, fix the unit test

--- a/MOEX_web.Tests/MOEX-TestsXUnit.csproj
+++ b/MOEX_web.Tests/MOEX-TestsXUnit.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>MOEX_TestsXUnit</RootNamespace>
+    <RootNamespace>MOEX.Tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
