--- a/MOEX_web/MOEX-web.csproj
+++ b/MOEX_web/MOEX-web.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MatBlazor" Version="2.7.0" />
+    <PackageReference Include="MathNet.Numerics" Version="4.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
