refactor: changed base href to MOEX-Web - preps to move to GitHub pages

--- a/MOEX_web/Properties/launchSettings.json
+++ b/MOEX_web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56003/",
+      "applicationUrl": "http://localhost:56003/MOEX-Web/",
       "sslPort": 44328
     }
   },
