--- a/MOEX_web/Properties/launchSettings.json
+++ b/MOEX_web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56003/MOEX-Web/",
-      "sslPort": 44328
+      "applicationUrl": "http://localhost:60323/MOEX-Web/",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -13,15 +13,17 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/MOEX-web/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
-    "MOEX-web": {
+    "MOEX-Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001/MOEX-web/;http://localhost:5000/MOEX-web/"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/MOEX-web/_framework/debug/ws-proxy?browser={browserInspectUri}"
     }
   }
 }
